--- a/.krew.yaml
+++ b/.krew.yaml
@@ -1,7 +1,7 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  name: confirm-ny
+  name: confirm-nyson
 spec:
   version: {{ .TagName }}
   homepage: https://github.com/brianpursley/kubectl-confirm
